<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FF0000"
    app:circularflow_viewCenter="@string/app_name"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edNome"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#656565"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#656565"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="@+id/edNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edNome"
        app:layout_constraintTop_toBottomOf="@+id/edNome" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#00FFB7"
        android:text="@string/remember"
        app:buttonIconTint="#002AFF"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#2196F3"
        android:outlineAmbientShadowColor="#3F51B5"
        android:outlineSpotShadowColor="#3F51B5"
        android:shadowColor="#2196F3"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edSenha"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:rippleColor="#3F51B5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orla_inteligente" />

</androidx.constraintlayout.widget.ConstraintLayout>